[package]
name = "chatui_client"
version = "0.1.1"
edition = "2018"
authors = ["grvxs gauravsinghsisodia5@gmail.com"]
description = "Client for chatui."
keywords = ["tui", "chat"]
repository = "https://github.com/grvxs/chatui"
readme = "../README.md"
license = "Apache-2.0"

[dependencies]
serde_json = "1.0.64"
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
unicode-width = "0.1.8"
