[package]
name = "chatui_server"
version = "0.1.1"
edition = "2018"
authors = ["grvxs gauravsinghsisodia5@gmail.com"]
description = "Server for chatui."
keywords = ["tui", "chat"]
repository = "https://github.com/grvxs/chatui"
readme = "../README.md"
license = "Apache-2.0"

[dependencies]
serde_json = "1.0.64"
